--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,13 @@ description = ""
 authors = ["Swayam Dani & Arjun M"]
 license = "MIT"
 readme = "README.md"
-packages = [{ include = "*" }]
-
+package-mode = false 
 
 [tool.poetry.dependencies]
 python = "^3.10 || ^3.11"
 streamlit = "^1.28.2"
 openai = "^1.3.2"
 black = "^23.12.1"
-
 
 [tool.poetry.group.develop.dependencies]
 black = "^23.11.0"
@@ -22,4 +20,3 @@ flake8 = "^6.1.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
